--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>My Code Deploy Application</title>
 </script>
 </head>
-<body bgcolor="yellow">
+<body bgcolor="blue">
 <h1><center>This is my code deploy application</center></h1>
 </body>
 </html>
